# docs/swagger.json
@@ -30,6 +30,20 @@
                 }
             }
         },
+        "/ping": {
+            "get": {
+                "description": "gets current weather from a set of states",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "checks if weather provider works",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/validate": {
             "post": {
                 "security": [
